--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,20 @@
 body {
   background-color: #111;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
   overflow: hidden;
   margin: 0;
+  padding: 1rem;
+}
+
+h1 {
+  text-align: center;
+  font-weight: 700;
+  color: pink;
+  width: 100%;
 }
 
 .container {
@@ -17,12 +26,12 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  max-width: 400px;
+  max-width: 900px;
 }
 
 .square {
-  width: 1rem;
-  height: 1rem;
+  width: 2rem;
+  height: 2rem;
   background: #1d1d1d;
   margin: 2px;
   box-shadow: 0 0 2px #000;
